--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <button class="btn" type="submit" id="clear" onclick="toggleWeek()">Clear Tag</button>
         </div>
         <div id="timeline">
-            
+            <!-- Weeks go here -->
         </div>
     </div>
     <script src="app.js"></script>
